--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.1",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
     "next": "15.1.0",
