--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prismjs": "^1.29.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-extract-colors": "^1.5.1",
     "react-icons": "^5.2.1",
     "sass": "^1.77.6",
     "sharp": "^0.33.4"
