--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.1",
+    "@vidstack/react": "^1.12.12",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
+    "hls.js": "^1.5.18",
     "next": "15.1.0",
     "postcss": "^8.4.39",
     "postcss-preset-env": "^9.5.15",
