--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
+    "crypto-js": "^4.2.0",
     "hls.js": "^1.5.18",
     "next": "15.1.0",
     "postcss": "^8.4.39",
@@ -24,11 +25,13 @@
     "react-extract-colors": "^1.5.1",
     "react-icons": "^5.2.1",
     "sass": "^1.77.6",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@csstools/postcss-global-data": "^2.1.1",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
