--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "19.0.0",
     "react-extract-colors": "^1.5.1",
     "react-icons": "^5.2.1",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "sass": "^1.77.6",
     "sharp": "^0.33.4",
     "zustand": "^5.0.3"
