--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "react-dom": "19.0.0",
     "react-extract-colors": "^1.5.1",
     "react-icons": "^5.2.1",
+    "react-image-zooom": "^1.3.5",
+    "react-inner-image-zoom": "^3.0.2",
+    "reactjs-image-zoom": "^1.0.8",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sass": "^1.77.6",
@@ -38,6 +41,7 @@
     "@types/node": "^20",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
+    "@types/react-inner-image-zoom": "^3.0.3",
     "postcss-custom-media": "^10.0.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5"
