--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
-# This file is a placeholder for environment variables required to run this project.
-# Currently, there are no environment variables needed.
-
-# Example of what future variables might look like:
-# NEXT_PUBLIC_API_KEY=your_api_key_here
-# DATABASE_URL=your_database_url_here
-# SECRET_KEY=your_secret_key_here
+API_BASE_URL=""
+MANGADEX_BASE_URL=""
+# Reverse proxy format: https://domain.com/proxy?url=
+NEXT_PUBLIC_REVERSE_PROXY=""
+SECRET_KEY=""
