--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "compressorjs": "^1.2.1",
     "crypto-js": "^4.2.0",
     "hls.js": "^1.5.18",
-    "mangadex-full-api": "^6.0.0",
-    "next": "15.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^15.1.6",
     "postcss": "^8.4.39",
     "postcss-preset-env": "^9.5.15",
     "prismjs": "^1.29.0",
@@ -25,23 +25,21 @@
     "react-dom": "19.0.0",
     "react-extract-colors": "^1.5.1",
     "react-icons": "^5.2.1",
-    "react-image-zooom": "^1.3.5",
-    "react-inner-image-zoom": "^3.0.2",
-    "reactjs-image-zoom": "^1.0.8",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sass": "^1.77.6",
     "sharp": "^0.33.4",
+    "swiper": "^11.2.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@csstools/postcss-global-data": "^2.1.1",
     "@types/crypto-js": "^4.2.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
-    "@types/react-inner-image-zoom": "^3.0.3",
     "postcss-custom-media": "^10.0.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5"
