--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@floating-ui/react-dom": "^2.1.1",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.48.1",
     "@vidstack/react": "^1.12.12",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "compressorjs": "^1.2.1",
     "crypto-js": "^4.2.0",
+    "drizzle-orm": "^0.39.1",
     "hls.js": "^1.5.18",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.1.6",
     "postcss": "^8.4.39",
     "postcss-preset-env": "^9.5.15",
+    "postgres": "^3.4.5",
     "prismjs": "^1.29.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -40,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
+    "drizzle-kit": "^0.30.4",
     "postcss-custom-media": "^10.0.7",
     "postcss-flexbugs-fixes": "^5.0.2",
     "typescript": "^5"
