fear: added user data encryption

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ MANGADEX_BASE_URL=""
 # Reverse proxy format: https://domain.com/proxy?url=
 NEXT_PUBLIC_REVERSE_PROXY=""
 SECRET_KEY=""
+SUPABASE_URL=""
+SUPABASE_ANON_KEY=""
+DATABASE_URL=""
+
+NEXT_PUBLIC_T_S=""
+NEXT_PUBLIC_M_S=""
+NEXT_PUBLIC_A_S=""
